--- a/H8_conclusions.tex
+++ b/H8_conclusions.tex
@@ -13,3 +13,5 @@ BFAST algorithm
 BASE type memory efficient
 
 FTP for easy on and offloading the data
+
+SEQ\_INDEX type maken memory efficient (75-300)
