--- a/H6_implementation.tex
+++ b/H6_implementation.tex
@@ -5,3 +5,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
 \chapter{Acccelerating the software implementation using HLS}
+
+
+analysing software performance
+
+recode cell generation according to paper.
+
+hardware accelerate 
+
+compare with software solution.
